--- a/entalk_app_final/public/events.html
+++ b/entalk_app_final/public/events.html
@@ -193,3 +193,15 @@
     <script src="/js/events.js"></script>
 </body>
 </html>
+<!-- Add this to your events.html file -->
+<div class="section">
+  <h2>Question Feedback</h2>
+  <div class="form-group">
+    <label for="feedback-event-select">Select Event</label>
+    <select id="feedback-event-select"></select>
+    <button id="load-feedback-btn">Load Feedback</button>
+  </div>
+  <div id="feedback-container">
+    <p>Select an event and click "Load Feedback" to view question feedback.</p>
+  </div>
+</div>
