--- a/entalk_app_final/public/events.html
+++ b/entalk_app_final/public/events.html
@@ -114,6 +114,33 @@
         tr:hover {
             background-color: #f1f1f1;
         }
+        /* CSS Fixes for Question Display */
+.question-list {
+    list-style-type: none;
+    padding: 0;
+}
+.question-list li {
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 10px;
+    background-color: #f9f9f9;
+}
+.question-text {
+    font-size: 16px;
+    margin-bottom: 8px;
+}
+.question-meta {
+    font-size: 12px;
+    color: #666;
+    display: flex;
+    justify-content: space-between;
+}
+
+/* Fix for questions section visibility */
+#questions-section {
+    display: block !important;
+}
     </style>
 </head>
 <body>
